# imc-tools

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: containers.yaml
src/imc_tools/: images.py  mcd.py  plotting.py  processing.py  segmentation.py  triangulation.py
src/imc_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
