[project]
name = "imc_tools"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
keywords = ["spatial", "imc"]
authors = [
    {name = "Jeff Quinn", email = "quinnj2@mskcc.org" },
]

maintainers = [
    {name = "Jeff Quinn", email = "quinnj2@mskcc.org" },
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "readimc>=0.6.2,<0.7",
    "tqdm>=4.66.1,<5",
    "cellpose==2.2.3",
    "opencv-python",
    "opencv-contrib-python",
    "higra"
]

[project.optional-dependencies]
dev = ["check-manifest"]
test = ["pytest", "tox"]

[project.urls]
"Homepage" = "https://github.com/tansey-lab/imc_tools"
"Documentation" = "https://github.com/tansey-lab/imc_tools"
"Source" = "https://github.com/tansey-lab/imc_tools"

[project.scripts]


[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[options.package_data]
imc_tools = ["model.yml.gz"]
